src/parser/snapshots/rbx_rsml__parser__tests__compiler_tween_six_args.snap
---
source: src/parser/mod.rs
assertion_line: 420
expression: compiled
---
CompiledRsml {
    root: Some(
        RootTreeNode {
            attributes: Attributes {
                data: {},
            },
            static_attributes: {},
            child_rules: [],
        },
    ),
    nodes: [],
}
