src/parser/snapshots/rbx_rsml__parser__tests__compiler_tween_too_many_args.snap
---
source: src/parser/mod.rs
assertion_line: 421
expression: compiled
---
CompiledRsml {
    root: Some(
        RootTreeNode {
            attributes: Attributes {
                data: {},
            },
            static_attributes: {},
            child_rules: [],
        },
    ),
    nodes: [],
}
