src/parser/snapshots/rbx_rsml__parser__tests__derive_missing_body.snap
---
source: src/parser/mod.rs
expression: parsed.ast
---
[
    Derive {
        declaration: Node {
            token: SpannedToken(
                0,
                DeriveDeclaration,
                7,
            ),
            leading_trivia: None,
        },
        body: None,
        with_clause: None,
        terminator: None,
    },
]
