src/parser/snapshots/rbx_rsml__parser__tests__derive_missing_semicolon.snap
---
source: src/parser/mod.rs
expression: parsed.ast
---
[
    Derive {
        declaration: Node {
            token: SpannedToken(
                0,
                DeriveDeclaration,
                7,
            ),
            leading_trivia: None,
        },
        body: Some(
            Node {
                node: Node {
                    token: SpannedToken(
                        8,
                        StringSingle(
                            "module",
                        ),
                        16,
                    ),
                    leading_trivia: None,
                },
            },
        ),
        with_clause: None,
        terminator: None,
    },
]
