src/parser/snapshots/rbx_rsml__parser__tests__derive_string.snap
---
source: src/parser/mod.rs
expression: parsed.ast
---
[
    Derive {
        declaration: Node {
            token: SpannedToken(
                0,
                DeriveDeclaration,
                7,
            ),
            leading_trivia: None,
        },
        body: Some(
            Node {
                node: Node {
                    token: SpannedToken(
                        8,
                        StringSingle(
                            "some-module",
                        ),
                        21,
                    ),
                    leading_trivia: None,
                },
            },
        ),
        with_clause: None,
        terminator: Some(
            Node {
                token: SpannedToken(
                    21,
                    SemiColon,
                    22,
                ),
                leading_trivia: None,
            },
        ),
    },
]
