src/parser/snapshots/rbx_rsml__parser__tests__derive_with_list.snap
---
source: src/parser/mod.rs
expression: parsed.ast
---
[
    Derive {
        declaration: Node {
            token: SpannedToken(
                0,
                DeriveDeclaration,
                7,
            ),
            leading_trivia: None,
        },
        body: Some(
            Node {
                node: Node {
                    token: SpannedToken(
                        8,
                        StringSingle(
                            "./tokens",
                        ),
                        18,
                    ),
                    leading_trivia: None,
                },
            },
        ),
        with_clause: Some(
            DeriveWithClause {
                keyword: Node {
                    token: SpannedToken(
                        19,
                        WithDeclaration,
                        24,
                    ),
                    leading_trivia: None,
                },
                items: Some(
                    List(
                        Delimited {
                            left: Node {
                                token: SpannedToken(
                                    25,
                                    ScopeOpen,
                                    26,
                                ),
                                leading_trivia: None,
                            },
                            content: Some(
                                [
                                    DeriveWithItem {
                                        name: Node {
                                            token: SpannedToken(
                                                27,
                                                Identifier(
                                                    "Padding",
                                                ),
                                                34,
                                            ),
                                            leading_trivia: None,
                                        },
                                        trailing_comma: Some(
                                            Node {
                                                token: SpannedToken(
                                                    34,
                                                    Comma,
                                                    35,
                                                ),
                                                leading_trivia: None,
                                            },
                                        ),
                                    },
                                    DeriveWithItem {
                                        name: Node {
                                            token: SpannedToken(
                                                36,
                                                Identifier(
                                                    "Theme",
                                                ),
                                                41,
                                            ),
                                            leading_trivia: None,
                                        },
                                        trailing_comma: Some(
                                            Node {
                                                token: SpannedToken(
                                                    41,
                                                    Comma,
                                                    42,
                                                ),
                                                leading_trivia: None,
                                            },
                                        ),
                                    },
                                    DeriveWithItem {
                                        name: Node {
                                            token: SpannedToken(
                                                43,
                                                StaticTokenIdentifier(
                                                    "Brand",
                                                ),
                                                50,
                                            ),
                                            leading_trivia: None,
                                        },
                                        trailing_comma: None,
                                    },
                                ],
                            ),
                            right: Some(
                                Node {
                                    token: SpannedToken(
                                        51,
                                        ScopeClose,
                                        52,
                                    ),
                                    leading_trivia: None,
                                },
                            ),
                        },
                    ),
                ),
            },
        ),
        terminator: Some(
            Node {
                token: SpannedToken(
                    52,
                    SemiColon,
                    53,
                ),
                leading_trivia: None,
            },
        ),
    },
]
